<?php

namespace App\Enum;

enum CivilityEnum: string
{
    case M = 'M';
    case MME = 'MME';
    case MLLE = 'MLLE';
    case AUTRE = 'AUTRE';
}
