<?php

namespace App\Enum;

enum GenderEnum: string
{
    case MASCULIN = 'MASCULIN';
    case FEMININ = 'FEMININ';
    case AUTRE = 'AUTRE';
    case NON_SPECIFIE = 'NON_SPECIFIE';
}
