<?php

namespace App\Enum;

enum OperationCategoryEnum: string
{
    case SERVICE = 'SERVICE';
    case GOODS = 'GOODS';
    case BOTH = 'BOTH';
}
