<?php

namespace App\Enum;

enum OwnershipTypeEnum: string
{
    case OWNER = 'OWNER';
    case BUYER = 'BUYER';
}
