<?php

namespace App\Enum;

enum PlatformRoleEnum: string
{
    case ADMIN = 'ADMIN';
    case USER = 'USER';
}
